# Node-HomeAutomation

./: CMakeLists.txt  Makefile  partitions_example.csv  sdkconfig
components/AcHandler/: CMakeLists.txt  panasonic_frame.h  panasonic_ir.c  panasonic_ir.h
components/AlarmHandle/: AlarmHandle.c  AlarmHandle.h  CMakeLists.txt
components/BH1750/: BH1750.c  BH1750.h  CMakeLists.txt
components/ConfigType/: CMakeLists.txt  ConfigType.c  ConfigType.h
components/DS1307/: CMakeLists.txt  DS1307.c  DS1307.h
components/HD44780/: CMakeLists.txt  HD44780.c  HD44780.h
components/IrHandle/: CMakeLists.txt  IrHandle.c  IrHandle.h
components/app/: CMakeLists.txt  app.c  app.h
components/ble_mesh_handle/: CMakeLists.txt  ble_mesh_handle.c  ble_mesh_handle.h  component.mk
components/clock_rtc/: CMakeLists.txt  clock_rtc.c  clock_rtc.h
components/dht11/: CMakeLists.txt  dht11.c  dht11.h
components/peripherals/: CMakeLists.txt  peripherals.c  peripherals.h
components/utilities/: CMakeLists.txt  utilities.c  utilities.h
main/: CMakeLists.txt  Common.h  main.c
